fejlrettelser og prikker

--- a/ansigtsbehandlinger.html
+++ b/ansigtsbehandlinger.html
@@ -115,9 +115,8 @@
 		<section class="pakkeB">
 		<article class="pakkebeskrivelser">
 				<h3>Klassisk ansigtsbehandling</h3>
-				<p>Daglig vedligeholdelse
-				Den klassiske til alle hudtyper
-				Denne behandling er til dig der generelt er god til at behandle egen hud, dig der giver den hvad den har brug for. Vi sørger for, at optimere og gennemgå huden. 
+				<p> Denne behanling er en del af den daglig vedligeholdelse og er en klassisker til alle hudtyper
+				Denne behandling er til dig der generelt er god til at behandle egen hud, dig der giver den hvad den har brug for. Vi sørger for at optimere og gennemgå huden. 
 			</p>
 			<ul> 
 				<li>Afrens </li>
@@ -142,19 +141,19 @@
 		<h3>Luksus diamantslibning</h3>
 			<p>Anti age – mod ar, pigmentskader og acne – 
 			En favorit når man skal have en glød tilbage 
-			til huden, og en grundig dybderens. 
+			til huden og en grundig dybderens. 
 		</p>
 			<ul> 
 				<li> Forfiner & forbedrer kvaliteten af hudens 
 				væv </li>
 				<li>Øger fasthed og spændstighed</li>
-				<li> Reducerer fine liner og rynker</li>
+				<li> Reducerer fine linjer og rynker</li>
 				<li>Balancerer & minimerer store pore</li>
 				<li> Forynger huden med et frisk, klart 
 				rosenrødt teint</li>
-				<li>Forbedrer Solskadet hud</li>
-				<li>Udjævner over pigmentering</li>
-				<li> Lysterapiens fantastiske effekt er tilføjet 
+				<li>Forbedrer solskadet hud</li>
+				<li>Udjævner overpigmentering</li>
+				<li> Lysterapiens fantastiske effekt er tilføjet til
 					denne behandling for at optimere den 
 					yderligere</li>
 			</ul>
@@ -179,7 +178,7 @@
 				<p>
 				Vores ansigtsmuskulatur afspejler altid vores humør. Ved stress og spændinger sammentrækkes ansigtets muskler, hvilket også afspejler sig i vores udseende.
 			</p>
-			<p>Ved massagen nedsættes ikke blot et stress niveau, men blodcirkulationen øges gevaldigt og muskelsammentrækninger mindskes, dette medfører en meget frisk og vital hud. Massagen udføres i C-vitamin Serum, massageolie med E & A vitamin, samt afrensningsolie
+			<p>Ved massagen nedsættes ikke blot stress niveauet, men blodcirkulationen øges gevaldigt og muskelsammentrækninger mindskes, dette medfører en meget frisk og vital hud. Massagen udføres i C-vitamin Serum, massageolie med E & A vitamin, samt afrensningsolie
 				</p>
 				<p> Tid 45 min. </p>
 
@@ -197,7 +196,7 @@
 		<h3>Hyaluron behandling</h3>
 			<p>ANTI-AGE 
 Hyaluron behandlingen er en livredder til 
-huden de har mangel på liv og fugt.
+huden der har mangel på liv og fugt.
 		</p>
 			
 				<ul> 
@@ -205,8 +204,8 @@ huden de har mangel på liv og fugt.
 				<li>Anti-Age</li>
 				<li>Løfter og forynger huden</li>
 				<li>Øger fasthed og spændstighed</li>
-				<li>Mod Udtørret hud</li>
-				<li>Kedelig, bleg, glansløse hud</li>
+				<li>Mod udtørret hud</li>
+				<li>Mod kedelig, bleg, glansløse hud</li>
 			</ul>
 			
 			
@@ -217,11 +216,11 @@ huden de har mangel på liv og fugt.
 				Acid Peel Mask, Hyaluron og Caviar ampul, 
 				serum samt opstrammende binde-
 				vævsmassage med Medex Vital Renew. Et 
-				intensivt re-sultat med fornyet vitalitet og 
-				fugt til huden. Denne be-handling er også 
+				intensivt resultat med fornyet vitalitet og 
+				fugt til huden. Denne behandling er også 
 				velegnet til før- og efterbehandling i 
 				forbindelse med kosmetisk kirurgiske 
-				indgreb. tillægsbehandling decolette er 
+				indgreb. Tillægsbehandling decolette er 
 				anbefalet</p>
 
 		<p>Tid: 75 min. </p>
@@ -235,7 +234,7 @@ huden de har mangel på liv og fugt.
 	  
 	  <section class="pakkeB">
 		<article class="pakkebeskrivelser">
-		<h3>Aha frugtsyre</h3>
+		<h3>Aha frugtsyre behandling</h3>
 			<p>Til huden der har behov for regenerering og 
 fornyelse
 		</p>
@@ -246,22 +245,22 @@ fornyelse
 				<li>Pigment forstyrrelser minimeres</li>
 				<li>Irregulær hud struktur forbedres drastisk</li>
 				<li>Linjer og rynker mindskes</li>
-				<li>Kedelig, bleg, glansløse hud får et nyt liv</li>
+				<li>Mod kedelig, bleg og glansløs hud får et nyt liv</li>
 			</ul>
 			
 			
 				<p>
 				AHA Frugtsyre er:
-				Hud Fornyende behandling med AHA/
-				frugtsyre. Reducere fine linjer og rynker, 
-				Kedelig, grå, glansløs hud, grove pore og 
-				Akne. Lysner pigmentpletter og regenerere 
+				Hud fornyende behandling med AHA/
+				frugtsyre. Reducerer fine linjer og rynker, 
+				Kedelig, grå, glansløs hud, grove porer og 
+				akne. Lysner pigmentpletter og regenererer 
 				nye celler. AHA’s arbejder også for at 
 				modvirke ældnings tegn under huden, ved at 
 				stimulere kollagen og elastin produktionen. 
 				Fra 15 jan. har vi valgt at optimere vores 
-				AHA frugtsyre med lysterapien som 
-				aflsuttende maske.
+				AHA frugtsyre behandling med lysterapi som 
+				afsluttende maske.
 				Hertil anbefales en DECOLLETE 
 				behandling for at fuldende dit smukke look</p>
 
@@ -282,47 +281,46 @@ fornyelse
 			<p>
 			
 				Behandling af rynker, ar, grove porer, 
-				pigmentforstyrrelser, solskadet hud. 
+				pigmentforstyrrelser og solskadet hud. 
 				Behandlingen der kan dokumentere dine 
-				hudforbedringer fra første behandling hvor 
+				hudforbedringer fra første behandling, hvor 
 				der tages før og efter billeder.
 				98% af alle udførte behandlinger giver 
 				resultater.
 						</p>
 			
 				<ul> 
-				<li>Linjer og rynker </li>
+				<li>Mindsker linjer og rynker </li>
 				<li>Anti-Age</li>
 				<li>Løfter og forynger huden</li>
 				<li>Øger fasthed og spændstighed</li>
 				<li>Mindsker pigmentskader</li>
-				<li>Resultater synlige v. 1 behandling</li>
+				<li>Resultater synlige ved 1. behandling</li>
 			</ul>
 			
 			
 				<p>
 
-				LED gavner træt, aldrende hud: det hjælper 
-				med blødgøring af linjer, folder
-				og rynker, sundere cirkulation, øget fugt og 
-				udstråling, hurtigere hud
-				reparation, forbedret elasticitet og hud 
-				tekstur samt stimulering af kollagen
-				processen. Infrarødt LED-lys kan også 
-				hjælpe med at reparere acne og
-				hyperpigmenterings pletter, fordi det 
+				LED gavner træt og aldrende hud. 
+				Det BLødgøre linjer, folder
+				og rynker og giver derudover sundere cirkulation, øget fugt og 
+				udstråling. Hudens tekstur, reperationsevne og elasticitet forbedres ved hjælp af
+				stimulering af kollagen processen. 
+				</p>
+			
+				<p>	
+				Infrarødt LED-lys kan også 
+				hjælpe med at reparere akne og
+				hyperpigmenteringspletter, fordi det 
 				stimulerer hudens naturlige helingsproces
-				og hjælper med at dræbe bakterier 
-				forårsaget af acne.</p>
+				og hjælper med at dræbe bakterier.</p>
 			
 				<p>
-				Ikke alene er LED Lysterapi masken 
-				effektiv, LED har 
+				LED har 
 				også vist sig at hjælpe brugere med at
-				komme i en meditativ tilstand, så de 15-30 
+				komme i en meditativ tilstand. Så de 15-30 
 				minutters sessioner er en perfekt
-				måde at få ro på dit sind og kan være mere 
-				afslappende end en lang lur.
+				måde at få ro på dit sind.
 								</p>
 
 		<p>Tid: 75 min. </p>
@@ -338,36 +336,36 @@ fornyelse
 		<article class="pakkebeskrivelser">
 		<h3>Micro needles kur 5 behandlinger</h3>
 			<p>Hvis du overvejer botox, Så prøv denne behandling først. </p>
-			<p>Non kirurgisk ansigsløft
+			<p>Non kirurgisk ansigsløft, der afhjælper:
 		</p>
 			
 				<ul> 
-				<li> Trist og livløs</li>
-				<li>Gammel/Rynket</li>
-				<li>Pigment forstyrrelse</li>
+				<li>Trist og livløs hud</li>
+				<li>Gammel/Rynket hud</li>
+				<li>Pigmentforstyrrelser</li>
 				<li>Irregulær hud</li>
 				<li>Linjer og rynker</li>
-				<li>Kedelig, bleg, glansløse</li>
+				<li>Kedelig, bleg og glansløs</li>
 				<li>Mangel på spændstighed</li>
 			</ul>
 			
 			
 				<p>
 				Medex MicroNeedles Skinroller er et lille 
-				unikt redskab der rulles hen over ansigtet. 
+				unikt redskab, der rulles hen over ansigtet. 
 				Dermaroller/Skinrolleren har 540 meget 
 				små nåle på 0,2 til 1,0 mm’s længde – 
-				afhængig af hvilken del af huden der skal 
+				afhængig af, hvilken del af huden der skal 
 				behandles.</p>
 			
 			<p>
 				Ved at rulle hen over huden bliver der skabt 
-				hundredevis af små penetreringer i huden. 
-				De aktive ingredienser der dermed trænge 
+				hundredevis af små penetreringer i huden, 
+				dermed trænger de aktive ingredienser  
 				dybere ind i huden. Behandlingen gør at der 
 				skabes en øget produktion af collagen og 
 				elastin, som gør huden mere fast, glat og 
-				spændstig. Glem Botox kvinde og prøv 
+				spændstig. Glem Botox og prøv 
 				denne kur. Tid pr. behandling 60 min.
 
 				 </p>
@@ -389,29 +387,29 @@ fornyelse
 		
       <section class="tillagsek1">
         <h4 id="tillagnavn1">Hovedbundsmassage</h4>
-        <p id="tillagbeskrivelse1">Nyd en dejlig 15 min. hovedbundsmassage alt imens du ligger med maske i behandling, får du yderligere forkælelse. 
-Ydes kun ifbm. med Ansigtsbehandlinger.</p>
+        <p id="tillagbeskrivelse1">Nyd en dejlig 15 min. hovedbundsmassage. Alt imens du ligger med maske i behandling, får du yderligere forkælelse. 
+ </p>
         <h4 id="tillagnavn2">Nakke & Skulder Massage</h4>
-        <p id="tillagbeskrivelse2">Nyd en dejlig 15 min. Nakke & Skulder Massage alt imens du ligger med maske under behandling. 
-Ydes kun ifbm. med Ansigtsbehandlinger.</p>
+        <p id="tillagbeskrivelse2">Nyd en dejlig 15 min. Nakke & Skulder Massage. Alt imens du ligger med maske under behandling. 
+ </p>
         <h4 id="tillagnavn3">Fodmaske inkl. fodmassage</h4>
-        <p id="tillagbeskrivelse3">Tør fødder men mangel på tid for at gøre noget, så sørger vi for, at fugte dem med en special maske og efterfuldt af en kort fodmassage.
-Ydes kun ifbm. med Ansigtsbehandlinger.</p>
+        <p id="tillagbeskrivelse3">Tørre fødder men mangel på tid? Så sørger vi for, at fugte dem med en special maske, efterfuldt af en kort fodmassage.
+ </p>
      
       </section>
 			
 		   <section class="tillagsek2">
         <h4 id="tillagnavn4">Eyelift</h4>
-        <p id="tillagbeskrivelse4">Eyelift er koncentreret omkring øjnene Special behandling med ampuller samt special masker.
-Ydes kun ifbm. med Ansigtsbehandlinger.</p>
+        <p id="tillagbeskrivelse4">Eyelift er koncentreret omkring øjnene. Special behandling med ampuller samt specialmasker.
+ </p>
         <h4 id="tillagnavn5">Decollette</h4>
-        <p id="tillagbeskrivelse5">Decollette er koncentreret omkring hals og lige under. Special behandling med ampuller samt special masker.
-Ydes kun ifbm. med Ansigtsbehandlinger.
+        <p id="tillagbeskrivelse5">Decollette er koncentreret omkring hals og lige under. Special behandling med ampuller samt specialmasker.
+ 
 
 </p>
         <h4 id="tillagnavn6">Håndmaske inkl. håndmassage</h4>
         <p id="tillagbeskrivelse6">Håndmaske gør underværker for enhver af os. Hænderne er det første man ser hos et menneske, så lad os tage os af dine hænder. Specialmaske inkl. håndmassage.
-Ydes kun ifbm. med Ansigtsbehandlinger.
+ 
 
 </p>
      
@@ -424,7 +422,7 @@ Ydes kun ifbm. med Ansigtsbehandlinger.
 	  </section>
 	</div>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
