--- a/bryllup.html
+++ b/bryllup.html
@@ -84,7 +84,7 @@
     <section class="hero"> <img class="heroimg" src="billeder/brud.png" alt="Bryllupsbillede">
       <article class="overlay"></article>
       <article class="herotxt" >
-        <h1> Hår og makeup til bruden</h1>
+        <h1> Brudehår og makeup</h1>
       </article>
 	
     </section>
@@ -96,13 +96,13 @@
     <section class="pakke1">
       <article class="pakkebeskrivelser">
 		<h3>Eventyrlig</h3>
-      <p>Dit hår og makeup skal være skudsikkert. Det skal fotografere korrekt og holde natten lang. Med denne basis pakke får du sat hår og makeup så du kan se perfekt ud på din store dag </p>
+      <p>Dit hår og makeup skal være skudsikkert. Det skal fotografere korrekt og holde natten lang. Med denne basis pakke får du sat hår og makeup, så du kan se perfekt ud på din store dag. </p>
       <ul>
         <li><i class="fa fa-check"></i> Hår og makeup</li>
         <li class="uncheck"><i class="fa fa-times"></i> Ansigtsbehandling</li>
         <li class="uncheck"><i class="fa fa-times"></i> Shellac</li>
         <li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
-        <li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Lash lift</li>
       </ul>
 	</article>
 	<article class="pakkepris">
@@ -119,7 +119,7 @@
         <li><i class="fa fa-check"></i> Ansigtsbehandling</li>
         <li class="uncheck"><i class="fa fa-times"></i> Shellac</li>
         <li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
-        <li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Lash lift</li>
       </ul>
 			</article>
 	<article class="pakkepris">
@@ -129,13 +129,13 @@
     <section class="pakke3">
 		<article class="pakkebeskrivelser">
       <h3>Vip Bruden</h3>
-      <p>Vil du have den fulde følelse af at blive behandling som en stjerne, så skal du booke denne pakke. Behandlinger udføres før dit bryllup og hår og makeup styles på dagen. </p>
+      <p>Vil du have den fulde følelse af at blive behandlet som en stjerne, så skal du booke denne pakke. Behandlinger udføres før dit bryllup. Hår og makeup styles på dagen. </p>
       <ul>
         <li><i class="fa fa-check"></i> Hår og makeup</li>
         <li><i class="fa fa-check"></i> Ansigtsbehandling</li>
         <li><i class="fa fa-check"></i> Shellac</li>
         <li><i class="fa fa-check"></i> Manicure</li>
-        <li><i class="fa fa-check"></i> lash lift</li>
+        <li><i class="fa fa-check"></i> Lash lift</li>
       </ul>
 			</article>
 	<article class="pakkepris">
@@ -147,26 +147,28 @@
 	  
     <section class="priser">
       <h3 id="proveoverskrift">Prøvesseioner</h3>
-      <h3 id="pigeoverskrift">Brudepiger</h3>
+      <h3 id="pigeoverskrift">Brudepiger</h3>	
 		
       <section class="provesek1">
-        <h4 id="provenavn1">Hår</h4>
+        <div class="horizontal_dotted_line" id="provenavn1"><h4>Hår</h4></div>
         <p id="provebeskrivelse1">Få sat dit hår som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
-        <h4 id="provenavn2">Makeup</h4>
+		  <div class="horizontal_dotted_line" id="provenavn2"> <h4 >Makeup</h4> </div>
         <p id="provebeskrivelse2">Få lagt din makeup som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
-        <h4 id="provenavn3">Hår og makeup</h4>
-        <p id="provebeskrivelse3">Både hår og makeup præcis som det skal være på dagen for bryllupet. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+        <div class="horizontal_dotted_line" id="provenavn3"> <h4 >Hår og makeup</h4> </div>
+        <p id="provebeskrivelse3">Både hår og makeup laves præcis som det skal være på dagen for bryllupet. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
         <h4 id="provepris1">550,-</h4>
         <h4 id="provepris2">550,-</h4>
         <h4 id="provepris3">899,-</h4>
       </section>
 		
-      <section class="pigesek1">
-        <h4 id="pigenavn1">Hår</h4>
+	 <h3 id="pigeoverskrift2">Brudepiger</h3>
+     
+		<section class="pigesek1">
+        <div class="horizontal_dotted_line" id="pigenavn1"> <h4 >Hår</h4> </div>
         <p id="pigebeskrivelse1">Få sat hår på brudepiger på samme adresse som bruden eller i salonen. </p>
-        <h4 id="pigenavn2">Makeup </h4>
-        <p id="pigebeskrivelse2">Make up på brudepiger på samme adresse som bruden eller i salonen.</p>
-        <h4 id="pigenavn3">Hår og makeup</h4>
+        <div class="horizontal_dotted_line" id="pigenavn2"> <h4 >Makeup</h4> </div>
+        <p id="pigebeskrivelse2">Makeup på brudepiger på samme adresse som bruden eller i salonen.</p>
+        <div class="horizontal_dotted_line" id="pigenavn3"> <h4 >Hår og makeup</h4> </div>
         <p id="pigebeskrivelse3">Både hår og makeup på brudepiger på samme adresse som bruden eller i salonen.</p>
         <h4 id="pigepris1">999,-</h4>
         <h4 id="pigepris2">899,-</h4>
@@ -177,7 +179,7 @@
 	<h3 id="koreoverskrift">Kørsel</h3>
 		
       <section class="koresek1">
-        <h4 id="korenavn1">Kørsel sjælland</h4>
+        <div class="horizontal_dotted_line" id="korenavn1"> <h4 >Kørsel Sjælland</h4> </div>
 		<p id="koreeskrivelse1">Kørsel i resten af Danmark er muligt. Pris efter aftale.</p>
 		 
 		<h4 id="korepris1">550,-</h4>
@@ -253,7 +255,7 @@
   </div>
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
