--- a/hudpleje.html
+++ b/hudpleje.html
@@ -89,7 +89,7 @@
 		<article class="pakkebeskrivelser">
 		<h3>Sølv</h3>
 		<p>Ansigt og øjne</p>
-		<p>Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> 
+		<p>Ganske lækker behandling hvor der kan indgå alt det nedenstående. Tiden bruges på det, der er vigtigst, efter aftale med dig. </p> 
 		<ul>
 		 <li>Facemap i hele ansigt</li>
 		<li>Analyse over hvad der skal til</li>
@@ -114,7 +114,7 @@
 		<h3>Guld</h3>
 		<p>Ansigt, øjne, hals & decolette & nakke-skulder massage</p>
 		<p>
-		Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> 
+		Ganske lækker behandling hvor der kan indgå alt det nedenstående. Tiden bruges på det, der er vigtigst, efter aftale med dig. </p> 
 			<ul>
 		 <li>Facemap i hele ansigt</li>
 		<li>Særlige ampuler</li>
@@ -142,7 +142,7 @@
 			<article class="pakkebeskrivelser">
 		<h3>Diamant</h3>
 		<p>Ansigt, Øjne, Hals, Decolette, Bryn farve & ret, Fodmaske, håndmaske, Hovedbundsmassage & Ansigtsmassage</p>
-		<p>Luksus behandling der skal friske dig helt op fra top til tå. Afslapning til det yderste og en ny og frisk udgave af dig selv.
+		<p>Luksus behandling, der skal friske dig helt op fra top til tå. Afslapning til det yderste og en ny og frisk udgave af dig selv.
 		</p>
 		<p>Ultimativ forkælelse med fantastiske resultater </p>
 		<p>Indeholder alt det din hud har brug for, og god tid til at få de bedste resultater</p>
@@ -162,7 +162,7 @@
 	
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
