--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
   <div class="wrapper">
 	  
 	  
-    <section class=hero>
+    <section class="hero">
 			<img class="heroimg" src="billeder/forside.png" alt="makeup">
 			<article class="overlay"></article>
 			<section class="herotxt" >
 				<h1>Makeupkursus specielt til dig</h1>
-				<a class=kurserknap href="kurser.html"> Se mere</a>
+				<a class="kurserknap" href="kurser.html"> Se mere</a>
 			</section>
 	</section>
 	  
@@ -116,7 +116,7 @@
 		
 		<li><h4> Vi har taget vores forbehold</h4></li>
 		 <p>
-		Vores behandlings briks er beklædt med blid plast, som skiftes mellem hver kunde. Dun behandler er iført maske og handsker, som på billedet eller til at finde bag Visir eller glas.</p>
+		Vores behandlings briks er beklædt med blid plast, som skiftes mellem hver kunde. Din behandler er iført maske og handsker, som på billedet eller til at finde bag visir eller glas.</p>
 		</ul>
       <article class="covidbillede"> 
 		<img class="covidbillede" src="billeder/forsidecovid.png" alt="makeup">
@@ -131,13 +131,13 @@
 		</p>
 		<p>
 
-	Mystylist er bygget op på 20 års erfaring, indenfor mode og skønhedsbranchen. 
+	Mystylist er bygget på 20 års erfaring, indenfor mode og skønhedsbranchen. 
 </p>
 		<p>
 	En af vores vinderbehandlinger er CND shellac, som holder i op til to uger. Hos os kan du vælge mellem, over hundrede forskellige farver. 
 </p>
 		<p>
-	Er du mest til franskmanicure, laver vi også gerne det. Helt uden Ekstra gebyr.
+	Er du mest til fransk manicure, laver vi også gerne det. Helt uden ekstra gebyr.
 </p>
 		<p>
 	Book din tid under behandlinger, eller ring på tlf;
@@ -154,7 +154,7 @@
         <h3>Mie Pilsgaard</h3>
         <p>Det var første gang at jeg prøvede lash lift incl farve og ‘botox-kur’.
 Det var en behagelig oplevelse og en god service med en masse info.
-Jeg kommer helt sikkert igen når det bliver tid igen, så kan varmt anbefalde mystylist.p>
+Jeg kommer helt sikkert igen når det bliver tid igen, så kan varmt anbefalde mystylist.</p>
       </article>
       <article class="review-2">
         <h3>Margit Riber</h3>
@@ -173,7 +173,7 @@ Kan varmt anbefales!
       </article>
 		
 		
-		  <p class="mereinfo">Er du interesseret i at læse flere anmeldelser, eller vil du måske selv skrive om din oplevelse hos MyStylist.
+		  <p class="mereinfo">Er du interesseret i at læse flere anmeldelser, eller vil du måske selv skrive om din oplevelse hos MyStylist?
 Så gå ind på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side, eller slå os op på <a class="link" href="https://dk.trustpilot.com/review/www.mystylist.dk">trustpilot.</a> </p>
     </section>
 
@@ -181,7 +181,7 @@ Så gå ind på vores <a class="link" href="https://www.facebook.com/myStylist.s
   </div>
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
