--- a/kontakt.html
+++ b/kontakt.html
@@ -115,20 +115,20 @@
 	<section class="kliniksec">
 		
 		<article class="klinikinfo">
-			<h4>Er du i tvivl om hvor du kan finde klinikken?</h4>
+			<h4>Er du i tvivl om, hvor du kan finde klinikken?</h4>
 			
 			<p>
 			MyStylist har adresse på;
-			Godthåbsvej 177, 2720 Vanløse.
+			Godthåbsvej 177, 2720 Vanløse. Lige op af Frederiksberg.
 			</p>
 			<p>
-			MyStylist deler entre med en anden virksomhed, 
+			MyStylist deler entre med en anden virksomhed. 
 			Vi understreger derfor at vores indgang, er døren 
 			til venstre, som ses ovre på billedet. 
 			</p>
 			<p>
-			Er du med offenligt ligger Klinikken kun 5 minutters 
-			gang fra Grøndal station, og derudover lige ud til en bus.
+			Er du med offenlig transport ligger klinikken kun 5 minutters 
+			gang fra Grøndal station, og derudover lige ud til en bus. Så klinikken er tæt på københavn. 
 			</p>
 			<p>
 			Er du i bil tilbyder vi gratis parkering, hele vejen op 
@@ -136,7 +136,7 @@
 			</p>
 			<p>
 			Cykler er velkomne uden foran klinikken, men må 
-			ikke sættes op Ad ruden.
+			ikke sættes op ad ruden.
 			</p>
 			<p>
 			Jeg glæder mig til at se dig i klinikken.
@@ -156,7 +156,7 @@
 		</div>
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
