--- a/kropsbehandlinger.html
+++ b/kropsbehandlinger.html
@@ -86,8 +86,8 @@
 	<section class="pakkeA">
 		<article class="pakkebeskrivelser">
 		<h3>Hotstone massage</h3>
-			<p>Har du mange muskelspændinger og kæmper med dem dagligt, så kan hotstone massage være noget for dig. 
-Der bruges opvarmede sten til at massere dybdegående, og er langt mere effektiv end at bruge hænderne. 
+			<p>Har du mange muskelspændinger og kæmper med dem dagligt? Så kan hotstone massage være noget for dig. 
+Der bruges opvarmede sten til at massere dybdegående, og er langt mere effektivt end at bruge hænderne. 
 		</p>
 	
 		
@@ -102,7 +102,7 @@ Der bruges opvarmede sten til at massere dybdegående, og er langt mere effektiv
 		<section class="pakkeB">
 		<article class="pakkebeskrivelser">
 				<h3>Rygrens</h3>
-				<p>Er du plaget an en ryg med urenheder og bumser, så står vi klar med diamantslibning samt manuel udrensning. Vi forbereder huden på en grunde dybderens og afslutter med masker som skal hjælpe med at eliminere urenheder.
+				<p>Er du plaget af en ryg med urenheder og bumser? Så står vi klar med en diamantslibning samt manuel udrensning. Vi forbereder huden med en grundig dybderens og afslutter med masker, som skal hjælpe med at eliminere urenheder.
 			</p>
 			
 		  <p>Behandlingstid: 45 Min. </p>
@@ -149,7 +149,7 @@ Så gå ind på vores <a class="link" href="https://www.facebook.com/myStylist.s
 </main>
 	
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
