--- a/kurser.html
+++ b/kurser.html
@@ -87,18 +87,20 @@
 	  
 	  
 	  <section class="kursusbeskrivelse">
-	  <h4>Lær at lægge makeup af en proffesionel - Hjemmefra </h4>
-	<p>Reklamer, shows, magasiner, events, reklamefilm, bryllupper gallafester m.m.
+	  <h4>Lær at lægge makeup af en professionel - Hjemmefra </h4>
+	<p>Reklamer, shows, magasiner, events, reklamefilm, bryllupper og gallafester m.m.
 		myStylist artisten har prøvet det hele og mere til. </p><p>
 
-Adrijana er erfaren og kreativ ildsjæl, med øje for detaljer og kreative unikke looks. Hun er derfor godt klædt på til at guide dig i makeuppens verden. </p><p>
-Om du er helt nybegynder, der aldrig har brugt makeup, fordi du ikke har mod på at starte fra bunden helt alene, eller om du er meget øvet og bare gerne vil bliver rigtig dygtig til at lægge den perfekte makeup til lige netop dit ansigt, så er det kurset for dig her.
+Adrijana er en erfaren og kreativ ildsjæl, med øje for detaljer og kreative unikke looks. Hun er derfor godt klædt på til at guide dig rundt i makeuppens verden. </p><p>
+Vi har kurser i alle niveauer, både nybegynder og øvet. 
+nybegynder kurser er til dig der aldrig har gået med makeup før. Vi tager det helt fra bunden, så der ikke er grund til frygt for om du kan følge med. 
+De øvede kurser er til dig der godt kan lægge en basismakeup, men gerne vil lære endnu mere, og lære at skræædersy din makeup så den passer helt perfekt til dig. 
 </p><p>
 Alle kurser foregår online, så du kan deltage i dit eget hjem, uden at skulle i kontakt med en masse nye mennesker. Dette er selvfølgelig af hensyn til covid-19, så vi alle kan passe bedst muligt på hinanden. 
 </p><p>
-Selvom kurset foregår online, er det stadig en live chat mellem dig og stylisten, Adrijana. Så du kan stadig stille spørgsmål, og det der bliver undervist i, vil være relevant for dem der deltager på lige nettop det kursus. Det er derfor meget mere givende, end optagede videoer, som er lavet til at skulle passe til alle der ser dem. 
+Selvom kurset foregår online, er det stadig en live chat mellem dig og stylisten, Adrijana. Så du kan stadig stille spørgsmål, og det der bliver undervist i, vil være relevant for dem der deltager på lige nettop det kursus. Det er derfor meget mere givende end optagede videoer, som er lavet til at skulle passe til alle der ser dem. 
 </p><p>
-Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enkelte kurser, og vælge om du vil have et enkelt kursus, hvor det kun er dig og stylisten. Eller om et gruppekursus med lidt flere deltagere. 
+Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enkelte kurser, og vælge om du vil have et enkelt kursus, hvor det kun er dig og stylisten. Eller om et gruppekursus med lidt flere deltagere tiltaler dig mere. 
 
 
  </p>
@@ -113,8 +115,8 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 		
 		  <article class="pakkebeskrivelser">
 		 <h3>Nybegynder</h3>
-		<p>Lær at lægge en dagsmakeup og lær også at opgraderer den til en aften makeup  </p>
-		<p>Her læres alt det gennerelle om makeup.
+		<p>Lær at lægge en dagsmakeup og lær også at opgradere den til en aftenmakeup  </p>
+		<p>Her læres alt det generelle om makeup.
 		</p>
 		
 		<p>Tid 3 timer</p>
@@ -133,7 +135,7 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 		<h3>Øjenskygge</h3>
 		<p>På dette kursus har vi fokus på øjenskygge. 
 </p>
-		<p>Dit niveau betyder ikke så meget, så længe du er interesseret i at lægge en øjenskugge der passer til lige præcis dig. 
+		<p>Dit niveau betyder ikke så meget, så længe du er interesseret i at lægge en øjenskygge der passer til lige præcis dig. 
 		</p>
 		
 		<p>Tid 3 timer</p>
@@ -153,9 +155,9 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 		<section class="pakke3">
 			  <article class="pakkebeskrivelser">
 			<h3>Øvet</h3>
-		<p>Kan du alt det basale omkring makeup, men vil gerne lære noget mere teknisk om makeup så er dette kurset for dig. 
+		<p>Kan du alt det basale omkring makeup, men vil gerne lære noget mere teknisk? Så er dette kurset for dig. 
 </p>
-		<p>Her lære du noget om hvilken makeup der er god til lige nettop din hovedform og hudtype. Hvilke farver passer til lige nettop din hud osv. 
+		<p>Her lærer du noget om hvilken makeup, der er god til lige netop din hovedform og hudtype. Hvilke farver passer til lige netop din hud osv. 
 		</p>
 		
 		<p>Tid 3 timer</p>
@@ -182,8 +184,8 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 		
 		  <article class="pakkebeskrivelser">
 		 <h3>Nybegynder</h3>
-		<p>Lær at lægge en dagsmakeup og lær også at opgraderer den til en aften makeup  </p>
-		<p>Her læres alt det gennerelle om makeup.
+		<p>Lær at lægge en dagsmakeup og lær også at opgradere den til en aftenmakeup  </p>
+		<p>Her læres alt det generelle om makeup.
 		</p>
 		
 		<p>Tid 1,5 timer</p>
@@ -199,10 +201,10 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 	  
 	<section class="pakke2">
 	  <article class="pakkebeskrivelser">
-		<h3>Øjenskygge</h3>
+			<h3>Øjenskygge</h3>
 		<p>På dette kursus har vi fokus på øjenskygge. 
 </p>
-		<p>Dit niveau betyder ikke så meget, så længe du er interesseret i at lægge en øjenskugge der passer til lige præcis dig. 
+		<p>Dit niveau betyder ikke så meget, så længe du er interesseret i at lægge en øjenskygge der passer til lige præcis dig. 
 		</p>
 		
 		<p>Tid 1 time</p>
@@ -221,11 +223,12 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 	  
 		<section class="pakke3">
 			  <article class="pakkebeskrivelser">
-			<h3>Øvet</h3>
-		<p>Kan du alt det basale omkring makeup, men vil gerne lære noget mere teknisk om makeup så er dette kurset for dig. 
+				<h3>Øvet</h3>
+		<p>Kan du alt det basale omkring makeup, men vil gerne lære noget mere teknisk? Så er dette kurset for dig. 
 </p>
-		<p>Her lære du noget om hvilken makeup der er god til lige nettop din hovedform og hudtype. Hvilke farver passer til lige nettop din hud osv. 
+		<p>Her lærer du noget om hvilken makeup, der er god til lige netop din hovedform og hudtype. Hvilke farver passer til lige netop din hud osv. 
 		</p>
+		
 		
 		<p>Tid 1,5 timer</p>
 				  
@@ -287,7 +290,7 @@ Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enke
 	
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
