--- a/om.html
+++ b/om.html
@@ -92,7 +92,7 @@
 			<p>Mit navn er Adrijana og jeg er indehaver af MyStylist.
 				Jeg har erfaring som hår og makeupartist, der rækker over 20 år. </p><p>
 			Jeg er uddannet kosmetolog på tiende år og uddannet permanentmakeupartist, en uddannelse som jeg tog på 
-			Monalisa cosmetiks. </p><p>
+			Monalisa cosmetics. </p><p>
 			Jeg har altid gået med tanken om at lave mit eget makeupmærke, 
 			så i år 2006 gik jeg i gang med, at finde ud af hvordan jeg kunne få 
 			min drøm til virkelighed på bedst mulig vis. Endelig for 4 år siden kom mit mærke IZANEL ud på markedet. 
@@ -100,7 +100,7 @@
 			Samtidig med at makeuppen føles lækker på huden, er godt pigmenteret 
 			og har en god holdbarhed, så går den også ind og virker som 
 			hudpleje.</p><p>
-			Jeg elsker mit arbejde, det er dejligt varieret. Jeg får lov til at lære en masse mennesker at kende og give dem et smil på læben. Jeg elsker at se hvordan en behandling kan være med til at styrke kundens selvtillid og udstråling. Det er det bedste ved mit arbejde.</p>
+			Jeg elsker mit arbejde, det er dejligt varieret. Jeg får lov til at lære en masse mennesker at kende og give dem et smil på læben. Jeg elsker at se, hvordan en behandling kan være med til at styrke kundens selvtillid og udstråling. Det er det bedste ved mit arbejde.</p>
 		</article>
 		
 	</section>
@@ -111,7 +111,7 @@
 		</div>
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
