--- a/shop.html
+++ b/shop.html
@@ -92,7 +92,7 @@
 		</div>
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
