--- a/styling-har.html
+++ b/styling-har.html
@@ -81,7 +81,7 @@
 <section class="pakke1">
   <article class="pakkebeskrivelser">
     <h3>Hår</h3>
-    <p>Om du skal på den røde løber eller blot en middag, så ønsker enhver kvinde at se ordentlig ud. Håret skal være i orden og det samme er gældende med makeup. </p>
+    <p>Om du skal på den røde løber eller blot en middag, så ønsker enhver kvinde at se ordentlig ud. Håret skal være i orden, og det bliver det nemt med denne pakke.  </p>
   </article>
 <article class="pakkepris">
   <p class="prisinfo">Styling i salonen</p>
@@ -93,12 +93,7 @@
 <section class="pakke2">
 <article class="pakkebeskrivelser">
 <h3>Makeup</h3>
-<p>Makeup er for enhver kvinde. 
-  Men makeup kan være ens værste 
-  fjende, men ved man hvad og 
-  hvordan kan den blive din bedste 
-  ven. Har du ikke de skills, lad os 
-  om opgaven</p>
+<p>Makeup kan være vigtig til enhver lejlighed, og hvis du vil have den helt perfekt, så få lagt en professionel makeup, der holder hele aftenen.</p>
 	  </article>
 <article class="pakkepris">
 <p class="prisinfo">Styling i salonen</p>
@@ -110,7 +105,7 @@
 <section class="pakke3">
 <article class="pakkebeskrivelser">
 <h3>Hår og makeup</h3>
-<p>Fuldend look med hår og makeup efter eget ønske til enhver anledning. Hvis du mangler ideen så er stylisten klar med råd og vejledning </p>
+<p>Fuldend looket med hår og makeup efter eget ønske til enhver anledning. Hvis du mangler ideér, er stylisten klar med råd og vejledning </p>
 	  </article>
 <article class="pakkepris">
 <p class="prisinfo">Styling i salonen</p>
@@ -122,9 +117,9 @@
 <section class="pakke1">
 <article class="pakkebeskrivelser">
 <h3>Dagmakeup</h3>
-<p>Dagmakeuppen kan kræve sit, for at teaterturen, cafeen eller blot middagen skal blive din succes og ikke være en stress faktor, så står vi klar med vores magiske pensler lige når det passer dig.
+<p>For at teaterturen, middagen eller blot cafeen skal blive din succes og ikke være en stress faktor, så står vi klar med vores magiske pensler, lige når det passer dig.
   
-  Få lagt en dagsmake up af en proffesionel, så du kan være stylet lige når du har lyst.</p>
+  Få lagt en dagsmake up af en professionel, så du kan være stylet lige når du har lyst.</p>
 <p>Styling foregår kun i salonen på denne pakke. </p>
 	  </article>
 <article class="pakkepris">
@@ -140,7 +135,7 @@
   udseendet stemme med det. Vi 
   hjælper med den smukkeste 
   naturlige makeup og lettere 
-  hårstyling. Slev om håret skal 
+  hårstyling. Selv om håret skal 
   hænge, så er der mange måder det 
   kan hænge på. </p>
 	  </article>
@@ -155,7 +150,7 @@
 <article class="pakkebeskrivelser">
 <h3>Hår og makeup til konfirmanden</h3>
 <p>En mindeværdig dag skal have en 
-  mindeværdig styling
+  mindeværdig styling.
   Hår og makeup stylet til sit 
   yderste og smukkeste stadie, efter 
   egne ønsker. Har du brug for ideer 
@@ -178,23 +173,23 @@
 <section class="priser">
   <h3 id="konfoverskrift"> Prøvesessioner for konfirmanden</h3>
   <section class="konfsek1">
-    <h4 id="konfnavn1">Hår</h4>
+   <div class="horizontal_dotted_line"> <h4 id="konfnavn1">Hår</h4></div>
     <p id="konfbeskrivelse1">Book en prøvesession til håropsætning, inden din store dag. Her ser
-      Vi på, hvad der passer lige netop til din hovedform. Hvis du ved 
-      Hvilken kjole du skal have på, tilpasser vi også håret til den, så det 
-      Hele spiller på dagen.</p>
-    <h4 id="konfnavn2">Makeup</h4>
-    <p id="konfbeskrivelse2">Har du et specielt look i tankerne, eller er du helt tom for idéer. Så 
-      Book en prøvesession af Makeup inden din store dag. Så kan vi 
-      Sammen skabe et look som du bliver glad for.</p>
+      vi på, hvad der passer lige netop til din hovedform. Hvis du ved 
+      hvilken kjole du skal have på, tilpasser vi også håret til den, så det 
+      hele spiller på dagen.</p>
+    <div class="horizontal_dotted_line" id="konfnavn2"><h4> Makeup</h4></div>
+    <p id="konfbeskrivelse2">Har du et specielt look i tankerne, eller er du helt tom for idéer? Så 
+      book en prøvesession af makeup inden din store dag. Så kan vi 
+      sammen skabe et look som du bliver glad for.</p>
     <h4 id="konfpris1">550,-</h4>
     <h4 id="konfpris2">550,-</h4>
   </section>
   <section class="konfsek2">
-    <h4 id="konfnavn3">Hår og makeup</h4>
+    <div class="horizontal_dotted_line" id="konfnavn3"><h4 >Hår og makeup</h4></div>
     <p id="konfbeskrivelse3">En mindeværdig dag fortjener en mindeværdig styling af både hår og 
-      Makeup, book en prøvesession, så du ikke skal spekulere på hvordan 
-      Det bliver på dagen.</p>
+      makeup, book en prøvesession, så du ikke skal spekulere på hvordan 
+      det bliver på dagen.</p>
     <h4 id="konfpris3">950,-</h4>
   </section>
 </section>
@@ -275,7 +270,7 @@
 
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
