--- a/voks.html
+++ b/voks.html
@@ -97,16 +97,16 @@
 		<section class="vokssek1">
 		
 		
-    	 <h4 id="voksnavn1">Knæ ned</h4>
-			<h4 id="voksnavn2">Hele ben</h4>
-			<h4 id="voksnavn3">Knæ op/ lår</h4>
-			<h4 id="voksnavn4">Hele arm</h4>
-			<h4 id="voksnavn5">Albue ned</h4>
-			<h4 id="voksnavn6">Armhuler</h4>
-			<h4 id="voksnavn7">Brazilian intimvoks</h4>
-			<h4 id="voksnavn8">Bikini</h4>
-			<h4 id="voksnavn9">Ryg</h4>
-			<h4 id="voksnavn10">Mave</h4>
+    	 <div class="horizontal_dotted_line" id="voksnavn1"> <h4> Knæ ned</h4></div>
+			<div class="horizontal_dotted_line" id="voksnavn2"><h4 >Hele ben</h4></div>
+			<div class="horizontal_dotted_line" id="voksnavn3"> <h4> Knæ op/lår</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn4">Hele arm</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn5">Albue ned</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn6">Armhuler</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn7">Brazilian intimvoks</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn8">Bikini</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn9">Ryg</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn10">Mave</h4></div>
 	
        
 			
@@ -128,15 +128,15 @@
 		  
 		  <section class="vokssek2">
 		
- 			<h4 id="voksnavn11">Voks bryn</h4>
-			<h4 id="voksnavn12">Overlæbe</h4>
-			<h4 id="voksnavn13">Hage</h4>
-			<h4 id="voksnavn14">Overlæbe & hage</h4>
-			<h4 id="voksnavn15">Dunhår ansigt</h4>
-			<h4 id="voksnavn16">Næse</h4>
-			<h4 id="voksnavn17">Øre</h4>
-			<h4 id="voksnavn18">Tær</h4>
-			<h4 id="voksnavn19">Fingre & hånd</h4>
+ 			<div class="horizontal_dotted_line"><h4 id="voksnavn11">Voks bryn</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn12">Overlæbe</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn13">Hage</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn14">Overlæbe & hage</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn15">Dunhår ansigt</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn16">Næse</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn17">Øre</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn18">Tær</h4></div>
+			<div class="horizontal_dotted_line"><h4 id="voksnavn19">Fingre & hånd</h4></div>
 			
 		
 		 	<h4 id="vokspris11">110,-</h4>
@@ -161,7 +161,7 @@
 	
 </main>
 <footer>
-  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+  <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: 60 56 41 36</p>
 <a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
 <a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
